# python-chainlit-multi-agents-playground

./: .dockerignore  .gitignore  Dockerfile  README.md  agent.py  app.py  cloudbuild.yaml  config.py  docker-compose.yaml  inference_models.py  pyproject.toml  tools.py  utils.py
agents/: development.py  prompts.py  structured_outputs.py
agents/tools/: tools.py
config/: settings.py
llm_models/: inference_models.py
utils/: inference_utils.py  message_utils.py
